fix jack channel parameters dialog